# EncryptionLab

./: .gitignore  CMakeLists.txt  main.cpp  readme.md
include/: Encoding.hpp  HelpWindow.hpp  KeyDialog.hpp  UI.hpp  WorkspaceTextEdit.hpp
include/menu/: DropdownElement.hpp  MenuButton.hpp  MenuItem.hpp  TopBarMenu.hpp
src/: Encoding.cpp  KeyDialog.cpp  UI.cpp
